refactor: changed challenge domain to ease frontend needs
